# LDA36

./: .gitignore  Aptfile  DockerFile  Dockerfile  README.md  api.py  chatbot.py  database.py  gemini_analyzer.py  pyproject.toml  services.py  teserract.py  vector_store.py
